added a pic in the head

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Portfolio 2.0</title>
     <nav><a href="./pages/projects.html">Projects</a></nav>
     <nav><a href="./pages/contact.html">Contact</a></nav>
+    <img src="./images/Wigan_Warriors_Logo,_November_2020.svg.png" id="Wigan" />
+    <figcaption>Wigan Warriors</figcaption>
 </head>
 <body>
 
+
+    <!-- <figure>
+        <img src="images/eiffelTower.jpg" alt="Photograph of the Eiffel Tower">
+        <br />
+        <figcaption>
+            The Eiffel Tower is a wrought-iron lattice tower on the Champ de Mars in Paris, France.
+        </figcaption>
+    </figure>
+      <dl>
+        <dt>HTML</dt>
+        <dd>HyperText Markup Language</dd>
+      
+        <dt>CSS</dt>
+        <dd>Cascading Style Sheets</dd>
+      </dl> -->
 </body>
 </html>
